play button and time-bar were added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/global-layout.css">
+  <script src="https://kit.fontawesome.com/e7963d4f96.js" crossorigin="anonymous"></script>
   <title>VideoPlayer</title>
 </head>
 <body class="body">
@@ -15,7 +16,9 @@
         <div class="juice"></div>
       </div>
       <div class="buttons-container">
-        <button class="play-button"></button>
+        <button class="play-button">
+          <i class="fa-solid fa-play"></i>
+        </button>
       </div>
       
     </div>
